# my-remote-box-cli

./: AGENT.md  Cargo.toml  install.sh
src/: herdr.rs  main.rs  tmux.rs  util.rs
src/commands/: clone.rs  completions.rs  exit.rs  info.rs  list.rs  mod.rs  new.rs  open.rs  pause.rs
