[package]
name = "my-remote-box-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for managing my remote box"
authors = ["nick"]

[[bin]]
name = "box"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.3", features = ["derive"] }
clap_complete = { version = "4.6.7", features = ["unstable-dynamic"] }
serde_json = "1.0"
